src/main/resources/japath3/processing/japath-2.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = peg$anyExpectation(),
      peg$c1 = function(p) { return stringify({start: p}); },
      peg$c2 = ":",
      peg$c3 = peg$literalExpectation(":", false),
      peg$c4 = function(p) {return p;},
      peg$c5 = function(a) {return a;},
      peg$c6 = function(y, e) { return {assignment: {lhs: typeof y === 'string' ? { step: { lhsProperty: y}} : y, rhs: e }}},
      peg$c7 = ".",
      peg$c8 = peg$literalExpectation(".", false),
      peg$c9 = function(x) { return {path: skip(flatten(x), '.')}; },
      peg$c10 = function(x) { return x; },
      peg$c11 = function(x) { return {step: x}; },
      peg$c12 = "{",
      peg$c13 = peg$literalExpectation("{", false),
      peg$c14 = "}",
      peg$c15 = peg$literalExpectation("}", false),
      peg$c16 = function(e) { return { subExpr: {args: e, _deprecatedSyntax: true} }; },
      peg$c17 = "do",
      peg$c18 = peg$literalExpectation("do", false),
      peg$c19 = "(",
      peg$c20 = peg$literalExpectation("(", false),
      peg$c21 = ")",
      peg$c22 = peg$literalExpectation(")", false),
      peg$c23 = function(e) { return { subExpr: {args: e} }; },
      peg$c24 = "null",
      peg$c25 = peg$literalExpectation("null", false),
      peg$c26 = function() {return {constant: {}};},
      peg$c27 = function(pi) {return pi;},
      peg$c28 = function(s) {return s;},
      peg$c29 = function(c) {return {constant: c};},
      peg$c30 = "true",
      peg$c31 = peg$literalExpectation("true", false),
      peg$c32 = "false",
      peg$c33 = peg$literalExpectation("false", false),
      peg$c34 = function(a) { return {boolExpr: {op: 'constant', args: a}}; },
      peg$c35 = "nil",
      peg$c36 = peg$literalExpectation("nil", false),
      peg$c37 = function() { return {nil: ''}; },
      peg$c38 = "_",
      peg$c39 = peg$literalExpectation("_", false),
      peg$c40 = "self",
      peg$c41 = peg$literalExpectation("self", false),
      peg$c42 = function() { return {self: ''}; },
      peg$c43 = "**",
      peg$c44 = peg$literalExpectation("**", false),
      peg$c45 = "^",
      peg$c46 = peg$literalExpectation("^", false),
      peg$c47 = function(bu) { return {wild: 'desc' + (bu !== null ? '-bu' : '')}; },
      peg$c48 = "*",
      peg$c49 = peg$literalExpectation("*", false),
      peg$c50 = function() { return {wild: 'all'}; },
      peg$c51 = "&",
      peg$c52 = peg$literalExpectation("&", false),
      peg$c53 = "selector",
      peg$c54 = peg$literalExpectation("selector", false),
      peg$c55 = "\xA7",
      peg$c56 = peg$literalExpectation("\xA7", false),
      peg$c57 = function(x) { return {selector: x}; },
      peg$c58 = "union",
      peg$c59 = peg$literalExpectation("union", false),
      peg$c60 = function(a) { return {arrayFlag: false, args: a}; },
      peg$c61 = function(x) { return {union: x}; },
      peg$c62 = "[",
      peg$c63 = peg$literalExpectation("[", false),
      peg$c64 = "]",
      peg$c65 = peg$literalExpectation("]", false),
      peg$c66 = function(a) { return {args: a === null ? [] : a}; },
      peg$c67 = function(x) { return {array: x}; },
      peg$c68 = "eq",
      peg$c69 = peg$literalExpectation("eq", false),
      peg$c70 = "neq",
      peg$c71 = peg$literalExpectation("neq", false),
      peg$c72 = "lt",
      peg$c73 = peg$literalExpectation("lt", false),
      peg$c74 = "gt",
      peg$c75 = peg$literalExpectation("gt", false),
      peg$c76 = "le",
      peg$c77 = peg$literalExpectation("le", false),
      peg$c78 = "ge",
      peg$c79 = peg$literalExpectation("ge", false),
      peg$c80 = "match",
      peg$c81 = peg$literalExpectation("match", false),
      peg$c82 = function(op, a) { return {compare: {op: op, arg: a}}; },
      peg$c83 = "and",
      peg$c84 = peg$literalExpectation("and", false),
      peg$c85 = "assert",
      peg$c86 = peg$literalExpectation("assert", false),
      peg$c87 = "or",
      peg$c88 = peg$literalExpectation("or", false),
      peg$c89 = "xor",
      peg$c90 = peg$literalExpectation("xor", false),
      peg$c91 = "not",
      peg$c92 = peg$literalExpectation("not", false),
      peg$c93 = function(op, a) { op = op === 'assert' ? 'and' : op; return {boolExpr: {op: op, args: a}}; },
      peg$c94 = "imply",
      peg$c95 = peg$literalExpectation("imply", false),
      peg$c96 = ",",
      peg$c97 = peg$literalExpectation(",", false),
      peg$c98 = function(p, c) {  return {boolExpr: {op: 'imply', args: [p, c]}}; },
      peg$c99 = "every",
      peg$c100 = peg$literalExpectation("every", false),
      peg$c101 = function(q, c) { return {quantifierExpr: {op: 'every', quant: q, check:c}}; },
      peg$c102 = "some",
      peg$c103 = peg$literalExpectation("some", false),
      peg$c104 = function(q, c) { return {quantifierExpr: {op: 'some', quant: q, check:c}}; },
      peg$c105 = "type",
      peg$c106 = peg$literalExpectation("type", false),
      peg$c107 = "String",
      peg$c108 = peg$literalExpectation("String", false),
      peg$c109 = "Number",
      peg$c110 = peg$literalExpectation("Number", false),
      peg$c111 = "Boolean",
      peg$c112 = peg$literalExpectation("Boolean", false),
      peg$c113 = "Any",
      peg$c114 = peg$literalExpectation("Any", false),
      peg$c115 = function(t) { return {hasType: t}; },
      peg$c116 = "filter",
      peg$c117 = peg$literalExpectation("filter", false),
      peg$c118 = "?",
      peg$c119 = peg$literalExpectation("?", false),
      peg$c120 = function(b) { return {filter: b}; },
      peg$c121 = "cond",
      peg$c122 = peg$literalExpectation("cond", false),
      peg$c123 = function(cond, ifExpr, elseExpr) {   if (elseExpr !== null) elseExpr = elseExpr[2]; else elseExpr = null; 
              return {conditional: {cond: cond, ifExpr: ifExpr, elseExpr: elseExpr }}; },
      peg$c124 = "optional",
      peg$c125 = peg$literalExpectation("optional", false),
      peg$c126 = "opt",
      peg$c127 = peg$literalExpectation("opt", false),
      peg$c128 = function(o) { return {optional: o}; },
      peg$c129 = "text",
      peg$c130 = peg$literalExpectation("text", false),
      peg$c131 = function() { return {text: ''}; },
      peg$c132 = "$",
      peg$c133 = peg$literalExpectation("$", false),
      peg$c134 = function(id) { return {var: (id === null ? '$' : id)}; },
      peg$c135 = "def",
      peg$c136 = peg$literalExpectation("def", false),
      peg$c137 = function(id, params, e) {   //if (params !== null) print('>>>' + params[2]);
              return {def: {name: id, params: params === null || params[2] === null ? [] : params[2] , expr: e}}; },
      peg$c138 = function(x) { return skip(flatten(x), ','); },
      peg$c139 = function(id, d) { return { param: { name: id, default: d !== null ? d[2] : null }}; },
      peg$c140 = "def-script",
      peg$c141 = peg$literalExpectation("def-script", false),
      peg$c142 = function(s) { return {defScript: {s: s}}; },
      peg$c143 = "message",
      peg$c144 = peg$literalExpectation("message", false),
      peg$c145 = function(e) { return {message: e}; },
      peg$c146 = "#",
      peg$c147 = peg$literalExpectation("#", false),
      peg$c148 = function(i) { return {argNumber: i}; },
      peg$c149 = "asProperty",
      peg$c150 = peg$literalExpectation("asProperty", false),
      peg$c151 = "regex",
      peg$c152 = peg$literalExpectation("regex", false),
      peg$c153 = function(id, a) { return {exprAppl: {name: id, args: a}}; },
      peg$c154 = "new",
      peg$c155 = peg$literalExpectation("new", false),
      peg$c156 = function() { return {create: ''}; },
      peg$c157 = function(a) { return { struct: {args: a === null ? [] : a} }; },
      peg$c158 = "js",
      peg$c159 = peg$literalExpectation("js", false),
      peg$c160 = "javascript",
      peg$c161 = peg$literalExpectation("javascript", false),
      peg$c162 = "::",
      peg$c163 = peg$literalExpectation("::", false),
      peg$c164 = function(func, a) { return { funcCall: {kind: 'javascript', ns: '', func: func, args: a} }; },
      peg$c165 = "j",
      peg$c166 = peg$literalExpectation("j", false),
      peg$c167 = "ava",
      peg$c168 = peg$literalExpectation("ava", false),
      peg$c169 = function(ns, func, a) { return { funcCall: {kind: 'java', ns: ns, func: func, args: a} }; },
      peg$c170 = function(func, a) { return { funcCall: {kind: 'directive', ns: '', func: func, args: a !== null ? a[2] : null } }; },
      peg$c171 = function(p) { return {pathAsProperty: p}; },
      peg$c172 = function(s) { return {propertyRegex: s}; },
      peg$c173 = function(x) { return {property: x}; },
      peg$c174 = "..",
      peg$c175 = peg$literalExpectation("..", false),
      peg$c176 = function(i, upper) { return {subscript: i, seq: true, upper: upper === null ? null : (upper[2] === null ? -1 : upper[2]) }; },
      peg$c177 = function(i) { return {subscript: i}; },
      peg$c178 = ">",
      peg$c179 = peg$literalExpectation(">", false),
      peg$c180 = function() { return {subscript: -1}; },
      peg$c181 = function(id) { return { step: {bind: id}}; },
      peg$c182 = function() { return parseInt(text(), 10); },
      peg$c183 = "-",
      peg$c184 = peg$literalExpectation("-", false),
      peg$c185 = function() { return Number(text()); },
      peg$c186 = /^[eE]/,
      peg$c187 = peg$classExpectation(["e", "E"], false, false),
      peg$c188 = "+",
      peg$c189 = peg$literalExpectation("+", false),
      peg$c190 = "0",
      peg$c191 = peg$literalExpectation("0", false),
      peg$c192 = /^[1-9]/,
      peg$c193 = peg$classExpectation([["1", "9"]], false, false),
      peg$c194 = /^[0-9]/,
      peg$c195 = peg$classExpectation([["0", "9"]], false, false),
      peg$c196 = "'",
      peg$c197 = peg$literalExpectation("'", false),
      peg$c198 = "\\'",
      peg$c199 = peg$literalExpectation("\\'", false),
      peg$c200 = /^[^']/,
      peg$c201 = peg$classExpectation(["'"], true, false),
      peg$c202 = function(s) { return s.join('').replace(/\\'/g, "'"); },
      peg$c203 = "\"",
      peg$c204 = peg$literalExpectation("\"", false),
      peg$c205 = "\\\"",
      peg$c206 = peg$literalExpectation("\\\"", false),
      peg$c207 = /^[^"]/,
      peg$c208 = peg$classExpectation(["\""], true, false),
      peg$c209 = function(s) { return s.join('').replace(/\\"/g, '"'); },
      peg$c210 = "\"\"\"",
      peg$c211 = peg$literalExpectation("\"\"\"", false),
      peg$c212 = function(s) { return flatten(s).join('').replace(/\n/g, '\\n').replace(/\r/g, '\\r'); },
      peg$c213 = /^[a-zA-Z_]/,
      peg$c214 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c215 = /^[a-zA-Z0-9_]/,
      peg$c216 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c217 = function(id) { return flatten(id).join(''); },
      peg$c218 = "`",
      peg$c219 = peg$literalExpectation("`", false),
      peg$c220 = "\\`",
      peg$c221 = peg$literalExpectation("\\`", false),
      peg$c222 = /^[^`]/,
      peg$c223 = peg$classExpectation(["`"], true, false),
      peg$c224 = function(id) { return id.join('').replace(/\\`/g, '`'); },
      peg$c225 = peg$otherExpectation("whitespace"),
      peg$c226 = /^[ \t\n\r]/,
      peg$c227 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c228 = "//",
      peg$c229 = peg$literalExpectation("//", false),
      peg$c230 = /^[\r\n]/,
      peg$c231 = peg$classExpectation(["\r", "\n"], false, false),
      peg$c232 = function() {return null;},

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesimpleExpr();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          peg$silentFails++;
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c0); }
          }
          peg$silentFails--;
          if (s5 === peg$FAILED) {
            s4 = void 0;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsesimpleExpr() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsepath();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      peg$silentFails++;
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s5 = peg$c2;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      peg$silentFails--;
      if (s3 === peg$FAILED) {
        s2 = void 0;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseassignment();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c5(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseassignment() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsepath();
    if (s1 === peg$FAILED) {
      s1 = peg$parseString();
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 58) {
        s2 = peg$c2;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsepath();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6(s1, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsepath() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
